--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meerabs_wardrobe_frontend",
+  "name": "ecommerce_frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
